unpackaged/main/default/objects/Currency_Conversion_Rate__mdt/Currency_Conversion_Rate__mdt.object-meta.xml
<CustomObject>
    <label>Currency Conversion Rate</label>
    <pluralLabel>Currency Conversion Rates</pluralLabel>
</CustomObject>