unpackaged/main/default/objects/Currency_Conversion_Rate__mdt/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>The beginning date of the period that the exchange rate is effective for.</description>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>