unpackaged/main/default/objects/Currency_Conversion_Rate__mdt/listViews/X2016_Rates.listView-meta.xml
<ListView>
    <fullName>X2016_Rates</fullName>
    <columns>MasterLabel</columns>
    <columns>Currency_Code__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Conversion_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2016</value>
    </filters>
    <filters>
        <field>Effective_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2016</value>
    </filters>
    <label>2016 Rates</label>
    <language>en_US</language>
</ListView>