unpackaged/main/default/objects/Currency_Conversion_Rate__mdt/listViews/X2020_Rates.listView-meta.xml
<ListView>
    <fullName>X2020_Rates</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Conversion_Rate__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2020</value>
    </filters>
    <filters>
        <field>Effective_End_Date__c</field>
        <operation>equals</operation>
        <value>12/31/2020</value>
    </filters>
    <label>2020 Rates</label>
    <language>en_US</language>
</ListView>